--- a/house-prediction-app.ipynb
+++ b/house-prediction-app.ipynb
@@ -497,8 +497,474 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "d88455b7-1331-47df-9d82-c046f2e85c2e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 2,  4,  3,  6,  1,  8,  7,  5, 11,  9, 27, 10, 19, 16, 43, 14, 12,\n",
+       "       13, 18])"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df3['bhk'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "d05e93f5-ccdc-4f2d-ae03-5a4721a4fe2d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>location</th>\n",
+       "      <th>size</th>\n",
+       "      <th>total_sqft</th>\n",
+       "      <th>bath</th>\n",
+       "      <th>price</th>\n",
+       "      <th>bhk</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1718</th>\n",
+       "      <td>2Electronic City Phase II</td>\n",
+       "      <td>27 BHK</td>\n",
+       "      <td>8000</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>230.0</td>\n",
+       "      <td>27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4684</th>\n",
+       "      <td>Munnekollal</td>\n",
+       "      <td>43 Bedroom</td>\n",
+       "      <td>2400</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>660.0</td>\n",
+       "      <td>43</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       location        size total_sqft  bath  price  bhk\n",
+       "1718  2Electronic City Phase II      27 BHK       8000  27.0  230.0   27\n",
+       "4684                Munnekollal  43 Bedroom       2400  40.0  660.0   43"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df3[df3.bhk>20] #incorrect total_sqft val for 43 bedroom"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "592532b2-be73-4c5c-bb87-3b9f423e2f4c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['1056', '2600', '1440', ..., '1133 - 1384', '774', '4689'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df3.total_sqft.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "b501aaab-7241-4f5a-949f-ef522f433a98",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_float(x):\n",
+    "    try:\n",
+    "        float(x)\n",
+    "    except:\n",
+    "        return False;\n",
+    "    return True;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "4cdf561e-73ae-4605-8f0e-fd1e7971f8c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>location</th>\n",
+       "      <th>size</th>\n",
+       "      <th>total_sqft</th>\n",
+       "      <th>bath</th>\n",
+       "      <th>price</th>\n",
+       "      <th>bhk</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>Yelahanka</td>\n",
+       "      <td>4 BHK</td>\n",
+       "      <td>2100 - 2850</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>186.000</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>122</th>\n",
+       "      <td>Hebbal</td>\n",
+       "      <td>4 BHK</td>\n",
+       "      <td>3067 - 8156</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>477.000</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>137</th>\n",
+       "      <td>8th Phase JP Nagar</td>\n",
+       "      <td>2 BHK</td>\n",
+       "      <td>1042 - 1105</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>54.005</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>165</th>\n",
+       "      <td>Sarjapur</td>\n",
+       "      <td>2 BHK</td>\n",
+       "      <td>1145 - 1340</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>43.490</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>188</th>\n",
+       "      <td>KR Puram</td>\n",
+       "      <td>2 BHK</td>\n",
+       "      <td>1015 - 1540</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>56.800</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>410</th>\n",
+       "      <td>Kengeri</td>\n",
+       "      <td>1 BHK</td>\n",
+       "      <td>34.46Sq. Meter</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>18.500</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>549</th>\n",
+       "      <td>Hennur Road</td>\n",
+       "      <td>2 BHK</td>\n",
+       "      <td>1195 - 1440</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>63.770</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>648</th>\n",
+       "      <td>Arekere</td>\n",
+       "      <td>9 Bedroom</td>\n",
+       "      <td>4125Perch</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>265.000</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>661</th>\n",
+       "      <td>Yelahanka</td>\n",
+       "      <td>2 BHK</td>\n",
+       "      <td>1120 - 1145</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>48.130</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>672</th>\n",
+       "      <td>Bettahalsoor</td>\n",
+       "      <td>4 Bedroom</td>\n",
+       "      <td>3090 - 5002</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>445.000</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               location       size      total_sqft  bath    price  bhk\n",
+       "30            Yelahanka      4 BHK     2100 - 2850   4.0  186.000    4\n",
+       "122              Hebbal      4 BHK     3067 - 8156   4.0  477.000    4\n",
+       "137  8th Phase JP Nagar      2 BHK     1042 - 1105   2.0   54.005    2\n",
+       "165            Sarjapur      2 BHK     1145 - 1340   2.0   43.490    2\n",
+       "188            KR Puram      2 BHK     1015 - 1540   2.0   56.800    2\n",
+       "410             Kengeri      1 BHK  34.46Sq. Meter   1.0   18.500    1\n",
+       "549         Hennur Road      2 BHK     1195 - 1440   2.0   63.770    2\n",
+       "648             Arekere  9 Bedroom       4125Perch   9.0  265.000    9\n",
+       "661           Yelahanka      2 BHK     1120 - 1145   2.0   48.130    2\n",
+       "672        Bettahalsoor  4 Bedroom     3090 - 5002   4.0  445.000    4"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df3[~df3['total_sqft'].apply(is_float)].head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "bf5f07da-39db-451c-b914-53133203e4fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def convert_sqft_to_num(x):\n",
+    "    tokens = x.split('-')\n",
+    "    if len(tokens) == 2:\n",
+    "        return (float(tokens[0])+float(tokens[1]))/2 #take the average for the ranges\n",
+    "    try:\n",
+    "        return float(x)\n",
+    "    except:\n",
+    "        return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "d4dafafb-0179-4ea2-a7fb-eb2869267320",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2166.0"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "convert_sqft_to_num('2166') #converts to float"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "e1008e06-5d7a-4280-8632-221d7c2dd71c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2475.0"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "convert_sqft_to_num('2100 - 2850') #takes the average "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "22a57601-ba51-4701-81ca-e8396ffd6876",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "convert_sqft_to_num('34.46Sq. Meter') #doesn't return anything as expected"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "d15c1b07-ba85-41e6-a5ef-6e80a8c58d76",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>location</th>\n",
+       "      <th>size</th>\n",
+       "      <th>total_sqft</th>\n",
+       "      <th>bath</th>\n",
+       "      <th>price</th>\n",
+       "      <th>bhk</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Electronic City Phase II</td>\n",
+       "      <td>2 BHK</td>\n",
+       "      <td>1056</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>39.07</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Chikka Tirupathi</td>\n",
+       "      <td>4 Bedroom</td>\n",
+       "      <td>2600</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>120.00</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Uttarahalli</td>\n",
+       "      <td>3 BHK</td>\n",
+       "      <td>1440</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>62.00</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   location       size total_sqft  bath   price  bhk\n",
+       "0  Electronic City Phase II      2 BHK       1056   2.0   39.07    2\n",
+       "1          Chikka Tirupathi  4 Bedroom       2600   5.0  120.00    4\n",
+       "2               Uttarahalli      3 BHK       1440   2.0   62.00    3"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df4 = df3.copy() #deep copy of df3\n",
+    "df4['total_sqft'] = df3['total_sqft'].apply(convert_sqft_to_num)\n",
+    "df3.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "d64bced9-a7fd-4fdf-bb2d-ec51fc9b755e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "location      Yelahanka\n",
+       "size              4 BHK\n",
+       "total_sqft       2475.0\n",
+       "bath                4.0\n",
+       "price             186.0\n",
+       "bhk                   4\n",
+       "Name: 30, dtype: object"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df4.loc[30]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "233650b7-4b7a-47e3-99be-62625cc8f270",
    "metadata": {},
    "outputs": [],
    "source": []
