created testing model and tested it

--- a/house-prediction-app.ipynb
+++ b/house-prediction-app.ipynb
@@ -3556,8 +3556,173 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 67,
+   "id": "cc8f1b52-5211-428f-8bcf-e7047d4f096a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['total_sqft', 'bath', 'bhk', '1st Block Jayanagar',\n",
+       "       '1st Phase JP Nagar', '2nd Phase Judicial Layout',\n",
+       "       '2nd Stage Nagarbhavi', '5th Block Hbr Layout', '5th Phase JP Nagar',\n",
+       "       '6th Phase JP Nagar',\n",
+       "       ...\n",
+       "       'Vijayanagar', 'Vishveshwarya Layout', 'Vishwapriya Layout',\n",
+       "       'Vittasandra', 'Whitefield', 'Yelachenahalli', 'Yelahanka',\n",
+       "       'Yelahanka New Town', 'Yelenahalli', 'Yeshwanthpur'],\n",
+       "      dtype='object', length=244)"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "e8e0b65e-9665-4850-8edf-95a70d0691d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict_price(location,sqft,bath,bhk):   #testing model\n",
+    "    loc_index = np.where(X.columns==location)[0][0]\n",
+    "\n",
+    "    x = np.zeros(len(X.columns))\n",
+    "    x[0] = sqft\n",
+    "    x[1] = bath\n",
+    "    x[2] = bhk\n",
+    "    if loc_index >= 0:\n",
+    "        x[loc_index] = 1\n",
+    "\n",
+    "    return lr_clf.predict([x])[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "029df129-f6db-46cb-8fb1-d8d57d1c2d33",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.12/site-packages/sklearn/base.py:493: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "83.49904677176052"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predict_price('1st Phase JP Nagar', 1000, 2, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "fdfa19ca-e9b5-448a-a3e8-0a1355f6edb8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.12/site-packages/sklearn/base.py:493: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "86.8051939520265"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predict_price('1st Phase JP Nagar', 1000, 3, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "f74ba322-c3cf-462f-9587-bfc37c6d2ae7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.12/site-packages/sklearn/base.py:493: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "181.27815484007021"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predict_price('Indira Nagar', 1000, 2, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "cdd6b11d-d27c-4378-b8b7-eb11865fc35f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.12/site-packages/sklearn/base.py:493: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "184.58430202033617"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predict_price('Indira Nagar', 1000, 3, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "e6ad7abb-41d3-4241-a60d-e6381461b605",
+   "id": "9d430a4f-8ccf-41f5-b781-f7908ce0e368",
    "metadata": {},
    "outputs": [],
    "source": []
