exported tested model to pickle file

--- a/house-prediction-app.ipynb
+++ b/house-prediction-app.ipynb
@@ -3721,8 +3721,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "id": "9d430a4f-8ccf-41f5-b781-f7908ce0e368",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle \n",
+    "with open('banglore_home_prices_model.pickle', 'wb') as f:\n",
+    "    pickle.dump(lr_clf, f) #exporting model to pickle file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5688bf1d-a061-4df7-9e59-e2138ffd14e2",
    "metadata": {},
    "outputs": [],
    "source": []
