--- a/house-prediction-app.ipynb
+++ b/house-prediction-app.ipynb
@@ -3733,8 +3733,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "id": "5688bf1d-a061-4df7-9e59-e2138ffd14e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "columns = {\n",
+    "    'data_columns' : [col.lower() for col in X.columns]\n",
+    "}\n",
+    "with open(\"columns.json\",\"w\") as f:\n",
+    "    f.write(json.dumps(columns))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dcc6afd9-a7f0-444d-8515-c0ff6370de21",
    "metadata": {},
    "outputs": [],
    "source": []
